[workspace]
resolver = "2"
members = ["core"]


[workspace.dependencies]
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.61"
futures = "0.3.30"
rstest = "0.19.0"
serde_yaml = "0.9.34"
solana-sdk = "1.18.15"
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
