[workspace]
resolver = "2"
members = ["mana-core", "pump"]


[workspace.dependencies]
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.61"
futures = "0.3.30"
rstest = "0.19.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
url = "2.5.0"
solana-sdk = "2.0.2"
solana-client = "2.0.2"
