[workspace]
resolver = "2"
members = ["mana-core", "pump"]


[workspace.dependencies]
# Date & Time
chrono = "0.4.38"

# CLI
clap = { version = "4.5.9", features = ["derive"] }

# HTTP Client
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"

# Async
smol = "2.0.0"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"

# Error handling
thiserror = "1.0.61"

# Testing
rstest = "0.19.0"

# Web3 & Solana
url = "2.5.0"
solana-sdk = "2.0.2"
solana-client = "2.0.2"
bs58 = "0.5.1"
bincode = "1.3.3"
