[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
solana-sdk = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
