[package]
name = "pump"
version = "0.1.0"
edition = "2021"

[dependencies]
mana-core = { path = "../mana-core" }
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
serde_json.workspace = true
bs58.workspace = true
bincode.workspace = true

clap = { version = "4.5.9", features = ["derive"] }
