[package]
name = "pump"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
mana-core = { path = "../mana-core" }

# CLI
clap.workspace = true

# Async Runtime
smol.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true

# Serialization / Deserialization
serde.workspace = true
serde_json.workspace = true

# Date & Time
chrono.workspace = true

# HTTP Client
isahc.workspace = true

# Web3 / Solana
solana-sdk.workspace = true
solana-client.workspace = true
bs58.workspace = true
bincode.workspace = true


[dev-dependencies]
tokio.workspace = true
